Fix: Padding around main media buttons and poster was unveven on mobile

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -783,6 +783,10 @@ html {
     margin-bottom: -1.5em;
 }
 
+.layout-mobile .detailPagePrimaryContainer {
+    padding: .5em var(--sidePadding);
+}
+
 [dir=ltr] .detailPagePrimaryContent {
     padding-right: 0;
 }
